fix: make wider on mobile

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -11,6 +11,13 @@
     margin-left: calc(50% - 30vw);
 }
 
+@media only screen and (max-width: 768px) {
+    #homepage-content {
+      width: 100vw;
+      margin-left: 0;
+    }
+}
+
 .profile_inner > h1 {
     color: white;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
